<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MamberPageActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/showName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="Krisada Thiangtham"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/textView1"
                    android:src="@drawable/comment_profile" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/showName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_member_back"
                android:ems="10"
                android:gravity="center"
                android:singleLine="true"
                android:text="Krisada" >
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_member_back"
                android:ems="10"
                android:gravity="center"
                android:singleLine="true"
                android:text="Thiangtham" >
            </EditText>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_member_back"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_member_back"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText4"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/edit_text"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/button1"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/logout_text"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>